deployments/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    name: url-shortener-ingress
spec:
  rules:
  - host: shrt.ly
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: url-shortener-service
            port: 
              number: 80
